--- a/home.html
+++ b/home.html
@@ -1,131 +1,59 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Swiftie Verse - Home</title>
-    <style>
-        body {
-            margin: 0;
-            font-family:Georgia, 'Times New Roman', Times, serif;
-            background-color: #f7b1c8;
-        }
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Sodium's Friday Schedule</title>
+  
+<link rel="stylesheet" href="something.css"> 
+<style>
+    body{
+        background-image: url(https://media.architecturaldigest.com/photos/664215bbe8f993fb5b10e7dc/16:9/w_2560%2Cc_limit/GettyImages-2152509342.jpg);
 
-        .header {
-            background-color: #d46a8d;
-            padding: 20px;
-            display: flex;
-            justify-content: space-between;
-            align-items: center;
-        }
-
-        .header h1 {
-            color: #3c2a34;
-            margin: 0;
-        }
-
-        .logo-box {
-            width: 200px;
-            height: 80px;
-            background-color: #ef9ab5;
-            border: 2px dashed #c44f71;
-            display: flex;
-            justify-content: center;
-            align-items: center;
-            font-weight: bold;
-            color: #3c2a34;
-        }
-
-        .container {
-            display: flex;
-        }
-
-        .sidebar {
-            width: 22%;
-            background-color: #f2cadb;
-            padding: 25px;
-            min-height: 80vh;
-        }
-
-        .sidebar ul {
-            list-style: none;
-            padding: 0;
-        }
-
-        .sidebar li {
-            margin: 12px 0;
-            font-size: 20px;
-        }
-
-        .sidebar a {
-            text-decoration: none;
-            color: #3c2a34;
-        }
-
-        .main {
-            width: 78%;
-            padding: 30px;
-        }
-
-        .main h2 {
-            color: #3c2a34;
-            font-family: Georgia, 'Times New Roman', Times, serif;
-            margin-top: 0;
-        }
-
-        footer {
-            background-color: #d46a8d;
-            color: #3c2a34;
-            display: flex;
-            justify-content: space-between;
-            padding: 15px 25px;
-            margin-top: 20px;
-        }
-    </style>
+    }
+    header h1{
+        font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
+    }
+    div{
+        background-image: url(https://assets.aboutamazon.com/dc/87/3905790f45d6a3f2eedaef596151/still-image-1.jpg);
+        color:aliceblue;
+        font-size: 25px;
+    }
+</style>
 </head>
-
 <body>
-    <div class="header">
-        <h1>Swiftie Verse</h1>
-        <img src="logo.png" alt="Logo" class="logo" style="width: 2cm; height: 2cm;">
-    </div>
 
-    <div class="container">
+  <header>
+    <img src="logo.png" alt="logo" style="width:80px; height:auto;">  
+    <h1> Swiftie Verse: 
 
-        <nav class="sidebar">
-            <ul>
-                <li><a href="home.html"><strong>Home</strong></a></li>
-                <li><a href="albums.html">Albums</a></li>
-                <li><a href="timeline.html">Timeline</a></li>
-                <li><a href="lyrics.html">Lyrics</a></li>
-                <li><a href="concerts.html">Concerts</a></li>
-                <li><a href="about.html">About TS</a></li>
-                <li><a href="sources.html">Sources</a></li>
-            </ul>
-        </nav>
-
-        <main class="main">
-            <h2>Description:</h2>
-            <p>
-                Welcome to <strong>Swiftie Verse</strong> — your all-in-one website dedicated to celebrating 
-                Taylor Swift's music, artistry, and journey. This site was created to give fans a simple, 
-                organized space to explore her albums, lyrics, timelines, concerts, and more.
-
-                This webpage aims to compile all of Taylor Swift's albums and their history so that her fans and even those just discovering her music are able to appreciate not just her music itself, but the background behind it. It will have several features, showing how she made her music, the lyrics to her music, and several visual aids to show her beautiful artistry. As Swifties ourselves, we aim to make this website a comprehensive guide to Taylor's music for the audience.
-            </p>
-            <p>
-                We chose this theme because Taylor Swift's evolution as an artist is not only remarkable but 
-                inspiring. Her music spans multiple genres, eras, and stories; each one meaningful to fans 
-                worldwide. Through this website, we hope to highlight her creativity, share information, and 
-                create a fun space for Swifties to explore her world.
-            </p>
-            <img src="https://idsb.tmgrup.com.tr/ly/uploads/images/2024/03/08/318582.jpg" alt="swiftie" style="width:200px; height:auto; border-radius:10px; margin-bottom:10px;">
-
-        </main>
-    </div>
-
-    <footer>
-        <p> © Frances Rugayan & Jeisha Refuerzo, 2025</p>
-    </footer>
+    </h1>
+    <h3>A journey through the different eras of Taylor Swift </h3>
+  </header>
 </body>
+
+  <nav>
+    <ul>
+      <li><a href="home.html">Home</a></li>
+        <li><a href="albums.html">Albums</a></li>
+        <li><a href="timeline.html">Timeline</a></li>
+        <li><a href="lyrics.html">Lyrics</a></li>
+        <li><a href="concerts.html"><strong>Concerts</strong></a></li>
+        <li><a href="about.html">About TS</a></li>
+        <li><a href="sources.html">Sources</a></li>
+    </ul>
+  </nav>
+
+  <img width="500px" height="auto" src="https://tecolotito.elsiglodetorreon.com.mx/i/2023/08/1718662.jpeg" alt="swiftie">
+
+  <div>
+    <p>This webpage aims to compile all of Taylor Swift's albums and their history so that her fans and even those just discovering her music are able to appreciate not just her music itself, but the background behind it. It will have several features, showing how she made her music, the lyrics to her music, and several visual aids to show her beautiful artistry. As Swifties ourselves, we aim to make this website a comprehensive guide to Taylor's music for the audience.</p>
+  </div>
+
+  <footer>
+    <p>© Frances Reanna Rugayan, 2025</p>
+  </footer>
+
+
 </html>
+
