--- a/about.html
+++ b/about.html
@@ -199,7 +199,7 @@ main p{
     </main>
 
   <footer>
-    <p>© Frances Reanna Rugayan, 2025</p>
+    <p>© Frances Reanna Rugayan & Saulenn Jeisha Refuerzo, 2025</p>
   </footer>
 
 
