--- a/albums.html
+++ b/albums.html
@@ -285,7 +285,7 @@
 </b>
 
 <footer>
-    <p>© Frances Reanna Rugayan, 2025</p>
+    <p>© Frances Reanna Rugayan & Saulenn Jeisha Refuerzo, 2025</p>
 </footer>
 
 <script>
