--- a/home.html
+++ b/home.html
@@ -51,7 +51,7 @@
   </div>
 
   <footer>
-    <p>© Frances Reanna Rugayan, 2025</p>
+    <p>© Frances Reanna Rugayan & Saulenn Jeisha Refuerzo, 2025</p>
   </footer>
 
 
