--- a/albums.html
+++ b/albums.html
@@ -90,10 +90,9 @@
     { name: "Reputation", cover: "https://upload.wikimedia.org/wikipedia/en/f/f2/Taylor_Swift_-_Reputation.png" },
     { name: "Lover", cover: "https://upload.wikimedia.org/wikipedia/en/c/cd/Taylor_Swift_-_Lover.png" },
     { name: "Folklore", cover: "https://upload.wikimedia.org/wikipedia/en/f/f8/Taylor_Swift_-_Folklore.png" },
-    { name: "Evermore", cover: "https://upload.wikimedia.org/wikipedia/en/4/4f/Taylor_Swift_-_Evermore.png" },
+    { name: "Evermore", cover: "https://upload.wikimedia.org/wikipedia/en/0/0a/Taylor_Swift_-_Evermore.png" },
     { name: "Midnights", cover: "https://upload.wikimedia.org/wikipedia/en/9/9f/Taylor_Swift_-_Midnights.png" },
-    { name: "The Tortured Poets Department", cover: "https://upload.wikimedia.org/wikipedia/en/4/4e/Taylor_Swift_-_The_Tortured_Poets_Department.png" },
-    { name: "Speak Now (Taylor’s Version)", cover: "https://upload.wikimedia.org/wikipedia/en/4/4f/Taylor_Swift_-_Speak_Now_%28Taylor%27s_Version%29.png" }
+    { name: "The Tortured Poets Department", cover: "https://i.scdn.co/image/ab67616d0000b2738ecc33f195df6aa257c39eaa" },
   ];
 
   function pickAlbum() {
