--- a/about.html
+++ b/about.html
@@ -137,7 +137,7 @@ main p{
 
   <nav>
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
         <li><a href="timeline.html">Timeline</a></li>
         <li><a href="lyrics.html">Lyrics</a></li>
