--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
 
   <nav>
     <ul>
-      <li><a href="home.html">Home</a></li>
+      <li><a href="index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
         <li><a href="timeline.html">Timeline</a></li>
         <li><a href="lyrics.html">Lyrics</a></li>
