--- a/albums.html
+++ b/albums.html
@@ -91,7 +91,7 @@
     { name: "Lover", cover: "https://upload.wikimedia.org/wikipedia/en/c/cd/Taylor_Swift_-_Lover.png" },
     { name: "Folklore", cover: "https://upload.wikimedia.org/wikipedia/en/f/f8/Taylor_Swift_-_Folklore.png" },
     { name: "Evermore", cover: "https://upload.wikimedia.org/wikipedia/en/0/0a/Taylor_Swift_-_Evermore.png" },
-    { name: "Midnights", cover: "https://upload.wikimedia.org/wikipedia/en/9/9f/Taylor_Swift_-_Midnights.png" },
+    { name: "Midnights", cover: "https://i.scdn.co/image/ab67616d0000b273fa747621a53c8e2cc436dee0" },
     { name: "The Tortured Poets Department", cover: "https://i.scdn.co/image/ab67616d0000b2738ecc33f195df6aa257c39eaa" },
   ];
 
