--- a/albums.html
+++ b/albums.html
@@ -81,7 +81,7 @@
 </head>
 
 <script>
-  const albums = [
+  var albums = [
     { name: "Taylor Swift (Debut)", cover: "https://upload.wikimedia.org/wikipedia/en/1/1f/Taylor_Swift_-_Taylor_Swift.png" },
     { name: "Fearless", cover: "https://upload.wikimedia.org/wikipedia/en/8/86/Taylor_Swift_-_Fearless.png" },
     { name: "Speak Now", cover: "https://upload.wikimedia.org/wikipedia/en/8/8f/Taylor_Swift_-_Speak_Now_cover.png" },
@@ -121,7 +121,7 @@
 </body>
 <nav>
     <ul>
-      <li><a href="index.html">Home</a></li>
+      <li><a href="./index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
         <li><a href="timeline.html">Timeline</a></li>
         <li><a href="lyrics.html">Lyrics</a></li>
