--- a/albums.html
+++ b/albums.html
@@ -156,6 +156,11 @@
     <div class="info">
         <p> This was Taylor Swift's first produced and released album in her career.
  </p>
+ <audio controls>
+             <source src="Picture.mp3" type="audio/mpeg">
+             <source src="Picture.mp3" type= "audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -167,6 +172,11 @@
     <div class="info">
     <p> This album features romantic, hopeful songs about loving bravely even when you’re scared of getting hurt.
     </p>
+    <audio controls>
+             <source src="Belong.mp3" type="audio/mpeg">
+             <source src="Belong.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -178,6 +188,11 @@
     <div class="info">
     <p> This album is a confessional album where she says everything she wished she had said out loud.
     </p>
+    <audio controls>
+             <source src="December.mp3" type="audio/mpeg">
+             <source src="December.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -188,7 +203,12 @@
     <div class="text">Red</div>
     <div class="info">
     <p> This album is a messy, passionate portrait of love that burns bright, breaks fast, and leaves emotional scars.
-    </div>
+    <audio controls>
+             <source src="Atwtmv.mp3" type="audio/mpeg">
+             <source src="Atwtmv.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
+      </div>
     </div>
     </div>
 <br>
@@ -199,6 +219,11 @@
     <div class="info">
     <p> This album is a bold reinvention celebrating independence, self-confidence, and life in the spotlight.
     </p>
+    <audio controls>
+             <source src="1989.mp3" type="audio/mpeg">
+             <source src="1989.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -210,6 +235,11 @@
     <div class="info">
     <p> This album is a dark, defiant response to public backlash that reveals love as her refuge.
     </p>
+    <audio controls>
+             <source src="Rep.mp3" type="audio/mpeg">
+             <source src="Rep.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -221,6 +251,11 @@
     <div class="info">
     <p> This album is a colorful, tender album about choosing love, softness, and emotional honesty.
     </p>
+    <audio controls>
+             <source src="Lover.mp3" type="audio/mpeg">
+             <source src="Lover.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -232,6 +267,11 @@
     <div class="info">
     <p> This album is a quiet, introspective storytelling about imagined lives, lost love, and lingering sadness.
     </p>
+    <audio controls>
+             <source src="August.mp3" type="audio/mpeg">
+             <source src="August.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -243,8 +283,13 @@
     <div class="info">
     <p> This album is a deeper, wintrier companion exploring heartbreak, healing, and acceptance.
     </p>
+    <audio controls>
+             <source src="Tolerate.mp3" type="audio/mpeg">
+             <source src="Tolerate.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
-    <div class="info">
+
     </div>
     </div>
     </div>
@@ -256,6 +301,11 @@
     <div class="info">
     <p> This album is all about late-night confessions about anxiety, ambition, regret, and self-reflection.
     </p>
+    <audio controls>
+             <source src="Anti-Hero.mp3" type="audio/mpeg">
+             <source src="Anti-Hero.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -267,6 +317,11 @@
     <div class="info">
     <p> This album is a raw, unfiltered outpouring of grief, obsession, and emotional exhaustion after love implodes.
     </p>
+    <audio controls>
+             <source src="Fortnight.mp3" type="audio/mpeg">
+             <source src="Fortnight.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
@@ -278,6 +333,11 @@
     <div class="info">
     <p> This is Taylor Swift' latest released album which is a glittering yet lonely journey of being admired onstage while quietly breaking behind the curtain.
     </p>
+    <audio controls>
+             <source src="TLOASG.mp3" type="audio/mpeg">
+             <source src="TLOASG.mp3" type="audio/mpeg">
+            Your browser does not support the audio element.
+        </audio>
     </div>
     </div>
     </div>
