--- a/sources.html
+++ b/sources.html
@@ -30,6 +30,7 @@
     h2{
         text-decoration: underline;
     }
+
 </style>
 </head>
 <body>
@@ -48,7 +49,6 @@
       <li><a href="./index.html">Home</a></li>
         <li><a href="albums.html">Albums</a></li>
         <li><a href="timeline.html">Timeline</a></li>
-        <li><a href="lyrics.html">Lyrics</a></li>
         <li><a href="concerts.html"><strong>Concerts</strong></a></li>
         <li><a href="about.html">About TS</a></li>
         <li><a href="sources.html">Sources</a></li>
@@ -66,8 +66,17 @@
         Frances Reanna Rugayan 
         <br>
         of 9-Sodium Batch 2029</h3>
+<!-- Add icon library -->
+<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star checked"></span>
+<span class="fa fa-star"></span>
+<span class="fa fa-star"></span>
 </div>
 <br>
+
 <img src="jeisha.jpg" alt="us" style="width: auto; height:12cm ;">
 <br>
 <main>
@@ -82,6 +91,10 @@
         > Wikipedia contributors. (2026, January 9). Taylor Swift: The Eras Tour. Wikipedia. https://en.wikipedia.org/wiki/Taylor_Swift:_The_Eras_Tour
         <br>
         > Wikipedia contributors. (2026, January 11). The Eras Tour. Wikipedia. https://en.wikipedia.org/wiki/The_Eras_Tour
+        <br>
+        > Pixabay. (n.d.). Free Alarm Clock The Summer Time Changeover photo and picture. https://pixabay.com/images/search/time/
+        <br>
+        Taylor Swift’s ERAs tour has officially begun: Here’s what Swifties have to say about it | GRAMMY.com. (n.d.). https://www.grammy.com/news/taylor-swift-eras-tour-setlist-midnights-evermore-folklore-reputation-1989-lover-speak-now-fearless-fan-reactions-attendance-record
     </h4>
 </main>
 
