--- a/timeline.html
+++ b/timeline.html
@@ -108,6 +108,11 @@ footer {
 <body>
 
 <header>
+  <link rel="icon" type="image/png" href="https://m.media-amazon.com/images/I/71U4Mwe+5DL._AC_UF894,1000_QL80_.jpg">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Swiftie Verse</title>
+  
     <img src="logo.png" alt="logo" style="width:80px; height:auto;">  
     <h1> Swiftie Verse: 
 
